svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cm-svc
spec:
  selector:
    app: cm-app
  ports:
    - name: nginx-port
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: mtool-port
      protocol: TCP
      port: 9002
      targetPort: 8080
