ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /demo.html
spec:
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: cm-svc
                port:
                  number: 9001
          - path: /mtool
            pathType: Prefix
            backend:
              service:
                name: cm-svc
                port:
                  number: 9002
